# GiocoOca4BS

./: AUTHORS  InstallerSetupScript.iss  README.md  crea_eseguibile.txt  requirements.txt  setup.cfg
GiocoDellOca4Bs/: CampoDaGioco.py  Casella.py  Domanda.py  ElencoDomande.py  Giocatore.py  Gioco.py  Impostazioni.py  Lobby.py  __main__.py  finestraStatistiche.py
GiocoOca4BS/: AUTHORS  LEGGIMI  LICENSE  README.md  TODO
GiocoOca4BS/src/: Domanda.py  ElencoDomande.py  Impostazioni.py  domandeItaliano.csv  finestraStatistiche.py
giocoOca/: campoDaGioco.py  domanda.py  giocatore.py  lobby.py
src/: CampoDaGioco.py  Casella.py  Domanda.py  ElencoDomande.py  Giocatore.py  Gioco.py  Impostazioni.py  Lobby.py  __main__.py  app.py  casella.py  domandeItaliano.csv  elencoDomande.py  finestraStatistiche.py  gioco.py
