[metadata]
name = GiocoDellOca4BS-adjam
version = 0.0.1
author = LiceoDaVinciJesi
author_email = diamantini.andrea@liceodavincijesi.edu.it
description = il gioco dell'oca, basato sulla vita e le opere di Giacomo Leopardi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Liceo-Da-Vinci-Jesi/GiocoOca4BS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = GiocoDellOca4BS
install_requires =
    wxpython
    pillow
    random
    time
	numpy
	pygame
package_dir = GiocoDellOca4BS
python_requires = >=3.6

[options.packages.find]
where = GiocoDellOca4BS
